etc/backend-app/deployment-backend-east.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-us-east
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  backend-us-east
      version: v1
  template:
    metadata:
      labels:
        app:  backend-us-east
        version: v1
    spec:
      serviceAccountName: backend
      containers:
        - image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          imagePullPolicy: IfNotPresent
          name: backend
          ports:
            - containerPort: 3000
